--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
       <!-- main navbar -->
         <nav class="nav-extended">
             <div class="nav-wrapper">
-              <a href="{{ url_for('home') }}" class="brand-logo">Duncan's Delights</a>
+              <a href="{{ url_for('recipes') }}" class="brand-logo">Duncan's Delights</a>
               <a href="#" data-target="mobile-demo" class="sidenav-trigger left"><i class="fas fa-bars"></i></a>
               <ul class="right left hide-on-med-and-down">
                 <li><a href="{{ url_for('recipes') }}">Recipe Collection</a></li>
