--- a/templates/maincourses.html
+++ b/templates/maincourses.html
@@ -2,7 +2,27 @@
 {% block content %}
 
       <h3 class="center-align">Main Courses</h3>
-                  
+      
+
+      <div class="row card-panel grey lighten-5">
+        <form action="{{ url_for('search') }}" method="post" class="col s12">
+            <div class="row valign-wrapper center-align">
+                <div class="input-field col s12 m8">
+                    <i class="fas fa-search prefix"></i>
+                    <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                    <label for="query">Search Tasks</label>
+                </div>
+                <div class="col s12 m4">
+                    <a href="{{ url_for('recipes') }}" class="btn-small">Reset</a>
+                    <button type="submit" class="btn-small">
+                        <i class="fas fa-search left"></i> Search
+                    </button>
+                </div>
+            </div>
+        </form>
+      </div>
+
+      {% if recipes|length > 0 %} 
       <ul class="collapsible">
         {% for recipe in recipes %}
            {% if recipe.course_category == "Main Course" %}   
@@ -52,6 +72,9 @@
             {% endif %}
         {% endfor %}
       </ul>
+      {% else %}
+        <h3 class="center-align">No Results Found</h3>
+      {% endif %}
 
       <div class="row">
         <a href="{{ url_for('recipes') }}" class="col s12 btn-large">
